cmake_minimum_required(VERSION 3.19.2)
#project(HWZ_ServerDFC)
project(LinuxServer)

set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS -pthread)
#include_directories("/usr/local/boost/lib")
link_libraries(libboost_json.so)
link_libraries(libaio.so)
#add_definitions(-DBOOST_CONTAINER_NO_LIB)
#add_definitions(-DBOOST_JSON_NO_LIB)
link_libraries(libmariadb.so)
link_libraries(libevent.so)
link_libraries(libcrypto.so)
include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${PROJECT_SOURCE_DIR}/lib)
#link_libraries(libuv.so)
add_executable(LinuxServer main.cpp Base.cpp CSocket.cpp CSocket.h CLoopHandle.cpp CLoopHandle.h CProtocol.cpp CProtocol.h CProtocolHttp.cpp CProtocolHttp.h CPoolThread.cpp CPoolThread.h CPoolProcess.cpp CPoolProcess.h CService.cpp CService.h CServiceManager.cpp CServiceManager.h CCrypto.cpp CCrypto.h CCryptoAES.cpp CCryptoAES.h CCache.cpp CCache.h CCacheRedis.cpp CCacheRedis.h CServiceRegister.cpp CServiceRegister.h CServiceAlive.cpp CServiceAlive.h CServiceLogin.cpp CServiceLogin.h CSql.cpp CSql.h CSqlMariadb.cpp CSqlMariadb.h CServiceRegUser.cpp CServiceRegUser.h CServiceLogout.cpp CServiceLogout.h CServicePassword.cpp CServicePassword.h CServiceDownload.cpp CServiceDownload.h CServiceUpload.cpp CServiceUpload.h CFileAio.cpp CFileAio.h)
#target_link_libraries(LinuxServer libcrypto.a)
target_link_libraries(LinuxServer libhiredis.a)
#target_link_libraries(HWZ_ServerDFC libuv.so)
#target_link_libraries(LinuxServer libevent.so)
#target_link_libraries(LinuxServer libmariadb.so)
